--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
     <button>
         <a routerLink="/login">Login</a>
     </button>
+    <button>
+        <a routerLink="/signup">Sign-up</a>
+    </button>
  
 </nav>
 <router-outlet></router-outlet>
