--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -2,6 +2,30 @@
     <!-- <div *ngIf="form.errors" class="alert alert-danger" style="width: 400px;">
         <p>Invalid Sign Up. Please recheck!</p>
     </div> -->
+
+    <div class="form-group" style="width: 400px;">
+        <label for="firstName">First name</label>
+        <input 
+            formControlName="firstName"
+            type="text" 
+            id="firstName" 
+            class="form-control">
+        <div class="alert alert-danger" *ngIf="firstName?.touched && firstName?.invalid">
+            <div *ngIf="firstName?.errors?.['required']">First name is required</div>
+        </div>
+    </div>
+
+    <div class="form-group" style="width: 400px;">
+        <label for="lastName">Last name</label>
+        <input 
+            formControlName="lastName"
+            type="text" 
+            id="lastName" 
+            class="form-control">
+        <div class="alert alert-danger" *ngIf="lastName?.touched && lastName?.invalid">
+            <div *ngIf="lastName?.errors?.['required']">Last name is required</div>
+        </div>
+    </div>
     
     <div class="form-group" style="width: 400px;">
         <label for="username">User Name</label>
@@ -37,7 +61,7 @@
         <input 
             formControlName="confirmPassword"
             type="password" 
-            id="password" 
+            id="confirmPassword" 
             class="form-control">
         <div class="alert alert-danger" *ngIf="confirmPassword?.touched && confirmPassword?.invalid">
             <div *ngIf="confirmPassword?.errors?.['required']">Confirm password is required</div>         
