--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -66,7 +66,7 @@
         <div class="alert alert-danger" *ngIf="confirmPassword?.touched && confirmPassword?.invalid">
             <div *ngIf="confirmPassword?.errors?.['required']">Confirm password is required</div>         
         </div>
-        <div *ngIf="form.invalid && form.errors?.passwordsShouldMatch" class="alert alert-danger">Passwords is not matching</div>    
+        <div *ngIf="confirmPassword.errors?.touched && form.invalid && form.errors?.passwordsShouldMatch" class="alert alert-danger">Passwords is not matching</div>    
     </div>
 
     <div class="form-group" style="width: 400px;">
