--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="form.errors" class="alert alert-danger" style="width: 400px;">
         <p>The username or password is invalid!</p>
     </div>
-    <div class="form-group" style="width: 400px;">
+    <div class="form-group">
         <label for="username">User Name</label>
         <input 
             formControlName="username"
@@ -18,7 +18,7 @@
       
     </div>
 
-    <div class="form-group" style="width: 400px;">
+    <div class="form-group">
         <label for="password">Password</label>
         <input 
             formControlName="password"
